Closed
Bug 676340
Opened 14 years ago
Closed 14 years ago
Crash [@ nsAccessible::NativeState() ] (called by nsXULTextFieldAccessible::GetValue)
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla7
| Tracking | Status | |
|---|---|---|
| firefox7 | --- | fixed |
People
(Reporter: surkov, Assigned: surkov)
References
Details
(Keywords: access, Whiteboard: [qa-])
Crash Data
Attachments
(1 file)
|
940 bytes,
patch
|
tbsaunde
:
review+
christian
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
similar to bug 649604 where nsHTMLTextFieldAccessible was a cause.
Reports: https://crash-stats.mozilla.com/report/list?product=Firefox&query_search=signature&query_type=contains&query=Accessible&reason_type=contains&date=08%2F03%2F2011%2011%3A29%3A56&range_value=4&range_unit=weeks&hang_type=any&process_type=any&do_query=1&signature=nsAccessible%3A%3ANativeState%28%29
Attachment #550454 -
Flags: review?(trev.saunders)
| Assignee | ||
Updated•14 years ago
|
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Comment 1•14 years ago
|
||
Comment on attachment 550454 [details] [diff] [review]
patch
SHOULDN'T YOU GET THE MSAA METHOD AS WELL AS THE XPCOM ONE? BUT i DON'T REALLY CARE SINCE i'LL ET IT SOON ANYWAY IF YOU DON'T
Attachment #550454 -
Flags: review?(trev.saunders) → review+
| Assignee | ||
Comment 2•14 years ago
|
||
(In reply to comment #1)
> Comment on attachment 550454 [details] [diff] [review] [diff] [details] [review]
> patch
>
> SHOULDN'T YOU GET THE MSAA METHOD AS WELL AS THE XPCOM ONE? BUT i DON'T
> REALLY CARE SINCE i'LL ET IT SOON ANYWAY IF YOU DON'T
that would be safer, but not technically correct, and yes I wouldn't care much since it goes away.
| Assignee | ||
Comment 3•14 years ago
|
||
Whiteboard: [inbound]
| Assignee | ||
Comment 5•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla8
Comment 6•14 years ago
|
||
Firefox 6 keeps crashing with this.
| Assignee | ||
Comment 7•14 years ago
|
||
Comment on attachment 550454 [details] [diff] [review]
patch
can we get it into Firefox 7? Trivial patch, no risk. High crash numbers in accessibility module.
Attachment #550454 -
Flags: approval-mozilla-beta?
| Assignee | ||
Comment 8•14 years ago
|
||
(In reply to Karel Jára from comment #6)
> Firefox 6 keeps crashing with this.
Firefox 6 was shipped, all we can do is to try to get it into Firefox 7.
Comment 9•14 years ago
|
||
This should definitely be reopened or a new bug should be filed od this nsAccessible::NativeState() bug. Recently I hasn’t been able to retrieve my latest crash reports with FF 7 beta. But with FF 6 beta it often did after a download has been completed.
Comment 10•14 years ago
|
||
(In reply to Karel Jára from comment #9)
This fix landed on the Nightly version of Firefox which is Firefox 8. The release drivers are currently debating whether to take this patch for Firefox 7.
Attachment #550454 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
| Assignee | ||
Comment 11•14 years ago
|
||
Marco, could you please land this patch on beta?
Comment 12•14 years ago
|
||
(In reply to alexander surkov from comment #11)
> Marco, could you please land this patch on beta?
Marco was on vacation this week, but I landed it as http://hg.mozilla.org/releases/mozilla-beta/rev/61d6b5f9ee9f
| Assignee | ||
Comment 14•14 years ago
|
||
(In reply to Trevor Saunders (:tbsaunde) from comment #12)
> (In reply to alexander surkov from comment #11)
> > Marco, could you please land this patch on beta?
>
> Marco was on vacation this week, but I landed it as
> http://hg.mozilla.org/releases/mozilla-beta/rev/61d6b5f9ee9f
yes, thank you for doing this!
status-firefox7:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•