Bug 676340 - Crash [@ nsAccessible::NativeState() ] (called by nsXULTextFieldAccessible::GetValue), r=tbsaunde